--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     working_directory: ~/code
     docker:
       # Android the primary container
-      - image: budtmo/docker-android-x86-10.0
+      - image: circleci/android:api-29
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
@@ -34,7 +34,7 @@ jobs:
           parallel: true
       - run:
           name: Wait for emulator
-          command: timeout 360000 adb wait-for-device
+          command: circle-android wait-for-boot
 #      - run:
 #          name: Wait for emulator still
 #          command: sleep 90
