--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.0"
 
     defaultConfig {
         applicationId "com.example.productdelivery"
@@ -62,6 +62,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 
 dependencies {
@@ -117,6 +118,8 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:2.24"
     kapt "com.google.dagger:dagger-android-processor:2.24"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.10'
+
+    implementation('com.google.guava:guava:29.0-jre') //to avoid unused dependencies; run the lintGradle task
 }
 
 repositories {
