--- a/build.gradle
+++ b/build.gradle
@@ -10,19 +10,25 @@ buildscript {
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0'
         classpath 'org.jetbrains.kotlin:kotlin-serialization:1.3.72'
 
+        classpath 'com.netflix.nebula:gradle-lint-plugin:latest.release'
+
     }
 }
 
+plugins {
+    id "nebula.lint" version "16.9.0"
+}
+
 allprojects {
+    apply plugin :"nebula.lint"
+    gradleLint {
+        rules=['unused-dependency']
+    }
     repositories {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
 
 ext {
